tests/expectations/parser/unreachable/expect_ident.out
namespace = "ParseStatement"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ';'
    --> test:1:4
     |
   1 | x::;
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '.'
    --> test:1:4
     |
   1 | x::.
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'import'
    --> test:1:4
     |
   1 | x::import
     |    ^^^^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ','
    --> test:1:4
     |
   1 | x::,
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '*'
    --> test:1:4
     |
   1 | x::*
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '+'
    --> test:1:4
     |
   1 | x::+
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '-'
    --> test:1:4
     |
   1 | x::-
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '/'
    --> test:1:4
     |
   1 | x::/
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '['
    --> test:1:4
     |
   1 | x::[
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ']'
    --> test:1:4
     |
   1 | x::]
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '{'
    --> test:1:4
     |
   1 | x::{
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '}'
    --> test:1:4
     |
   1 | x::}
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '('
    --> test:1:4
     |
   1 | x::(
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ')'
    --> test:1:4
     |
   1 | x::)
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found ':'
    --> test:1:4
     |
   1 | x:::
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '::'
    --> test:1:4
     |
   1 | x::::
     |    ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '?'
    --> test:1:4
     |
   1 | x::?
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '_'
    --> test:1:4
     |
   1 | x::_
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '='
    --> test:1:4
     |
   1 | x::=
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '=='
    --> test:1:4
     |
   1 | x::==
     |    ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '!'
    --> test:1:4
     |
   1 | x::!
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '!='
    --> test:1:4
     |
   1 | x::!=
     |    ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '>'
    --> test:1:4
     |
   1 | x::>
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '>='
    --> test:1:4
     |
   1 | x::>=
     |    ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '<'
    --> test:1:4
     |
   1 | x::<
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '<='
    --> test:1:4
     |
   1 | x::<=
     |    ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '>'
    --> test:1:4
     |
   1 | x::>
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '..'
    --> test:1:4
     |
   1 | x::..
     |    ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'as'
    --> test:1:4
     |
   1 | x::as
     |    ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'console'
    --> test:1:4
     |
   1 | x::console
     |    ^^^^^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'const'
    --> test:1:4
     |
   1 | x::const
     |    ^^^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'let'
    --> test:1:4
     |
   1 | x::let
     |    ^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'for'
    --> test:1:4
     |
   1 | x::for
     |    ^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'if'
    --> test:1:4
     |
   1 | x::if
     |    ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'else'
    --> test:1:4
     |
   1 | x::else
     |    ^^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'i8'
    --> test:1:4
     |
   1 | x::i8
     |    ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'i16'
    --> test:1:4
     |
   1 | x::i16
     |    ^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'i32'
    --> test:1:4
     |
   1 | x::i32
     |    ^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'i64'
    --> test:1:4
     |
   1 | x::i64
     |    ^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'i128'
    --> test:1:4
     |
   1 | x::i128
     |    ^^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'u8'
    --> test:1:4
     |
   1 | x::u8
     |    ^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'u16'
    --> test:1:4
     |
   1 | x::u16
     |    ^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'u32'
    --> test:1:4
     |
   1 | x::u32
     |    ^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'u64'
    --> test:1:4
     |
   1 | x::u64
     |    ^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'u128'
    --> test:1:4
     |
   1 | x::u128
     |    ^^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '&'
    --> test:1:4
     |
   1 | x::&
     |    ^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'return'
    --> test:1:4
     |
   1 | x::return
     |    ^^^^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'self'
    --> test:1:4
     |
   1 | x::self
     |    ^^^^""",
    """
Error [EPAR0370005]: expected ; -- found '<eof>'
    --> test:1:4
     |
   1 | x::Self
     |    ^^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'true'
    --> test:1:4
     |
   1 | x::true
     |    ^^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found 'false'
    --> test:1:4
     |
   1 | x::false
     |    ^^^^^""",
    """
Error [EPAR0370009]: unexpected string: expected 'identifier', found '0'
    --> test:1:4
     |
   1 | x::0
     |    ^""",
]
